[metadata]
name = pyls-isort
version = 0.1.1
author = Florian Mounier
author_email = paradoxxx.zero@gmail.com
license = MIT
description = Isort plugin for python-language-server
url = https://github.com/paradoxxxzero/pyls-isort
platforms = Any
provides = pyls_isort

[options]
packages = find:
install_requires = python-language-server; isort
setup_requires = setuptools; setuptools_scm

[options.entry_points]
pyls = pyls_isort = pyls_isort.plugin
